    value on the command line but default to no timeout.

+ Fixed a bug in the passphrase location checking code (this would not 
have affected running suites with the passphrase installed in the suite
definition directory on the suite host or remote task hosts).

+ Stopped profilic suite logging caused by gcontrol continually checking
for the current list of task names (as of 4.5.0 the displayed task list
is determined dynamically).

+ Two new job submission methods for test purposes: background_slow
(takes 10 seconds to complete) and fail (always fails).

+ Submission of tasks that become ready to run at the same time
is now done in batches (size configurable): batch members
are submitted in parallel, and cylc waits on all member job submissions
(but not the submitted jobs, note) to return before continuing to the
next batch. Cylc cannot respond to network requests while submitting 
tasks so this should significantly improve performance for large
ensemble suites.

+ gcontrol "View -> Suite Log" now works even if the suite was not
running when the GUI started up.

+ the "outputs" example suite was not validating due to use of old-style 
cycle time variable in output messages. The new release generator
script now aborts in case of non-validating examples.

+ The remote task execution mechanism now automatically sources
/etc/profile and $HOME/.profile on the remote host, if they exist.
This may make most previous use of the "initial scripting" config item
obsolete.

________________________________________________________________________
4.5.2 PENDING

+ Fixed the new delayed retry feature, which was not working properly for
cycling tasks after the first cycle.

+ For ssh messaging, where remote tasks reinvoke messaging commands on
the suite host, the path to cylc on the suite host is now transferred
explicitly via the remote job script so we don't assume .profile will do
the job on the suite host (although it probably will).
