@@ -166,7 +166,8 @@ basicstyle=\color{basic}\ttfamily,
 \begin{document}
 
  % cylc-version.txt is generated each time by doc/process
-\title{The Cylc User Guide \\
+\title{The Cylc Suite Engine\\
+User Guide \\
 \protect \input{cylc-version.txt} \\
 GNU GPL v3.0 Software License \\
 Copyright (C) 2008-2012 Hilary Oliver, NIWA}
