@@ -135,11 +135,7 @@ numbers=none,
       {\normalfont\normalsize\bfseries}}
 \makeatother
 
-%\title{Cylc \linebreak 
-%An Optimal Adaptive Metascheduler \linebreak 
-%For Complex Forecasting Suites \linebreak 
-
-\title{The Cylc Forecast Suite Metascheduler\linebreak 
+\title{The Cylc Suite Engine\linebreak 
 User Guide \linebreak 
 {\em \small
 \input{cylc-version.txt} % generated each time by doc/process
