@@ -448,7 +448,7 @@ cylc uses Pyro rather minimally.
 Recent versions of Pyro require Python 2.5 or greater, due to use of the 
 \lstinline=with= statement introduced in 2.5.
 
-\paragraph{Pyro 3.9 and Earlier}
+\subsubsection{Pyro 3.9 and Earlier}
 
 Beware of Linux distributions that come packaged with old Pyro versions.
 Pyro 3.9 and earlier is not compatible with the new-style Python classes
@@ -483,7 +483,7 @@ AttributeError: type object 'A' has no attribute '_taskdef__bases_'
 _run --debug testsuite.1322742021 2010010106 failed: 1
 \end{lstlisting}
 
-\paragraph{Apple Mac OSX}
+\subsubsection{Apple Mac OSX}
 
 It has been reported that cylc runs fine on OSX 10.6 SnowLeopard, but on 
 OSX 10.7 Lion there is an issue with constructing proper FQDNs (Fully
@@ -4751,6 +4751,104 @@ limited to 2 and 3 tasks respectively:
 Note assignment of runtime task family members to queues using the
 family name.
 
+\subsection{Automatic Task Retry On Failure}
+\label{TaskRetries}
+
+See also Section~\ref{RefRetries} in the {\em Suite.rc Reference}.
+
+Tasks can be configured with a list of ``retry delay'' periods, in
+minutes, such that if a task fails it will go into a temporary
+``retry\_delayed'' state and then automatically resubmit itself after
+the next specified delay period expires. A usage example is shown in the
+suite listed below under {\em Suite And Task Event Handling},
+Section~\ref{EventHandling}.
+
+\subsection{Suite And Task Event Handling}
+\label{EventHandling}
+
+See also Sections~\ref{SuiteEventHandling} and~\ref{TaskEventHandling}
+in the {\em Suite.rc Reference}.
+
+Cylc can call a nominated ``event handler'' script when events such as
+suite shutdown, or task failure or timeout occur. This is intended to
+facilitate centralized alerting and automated handling of critical
+events. Event handlers can send an email or an SMS, call a pager, and so
+on; or intervene in the operation of their own suite using cylc commands.
+\lstinline=cylc [hook] email-suite= and \lstinline=cylc [hook] email-task=
+are example event handlers that come with cylc.
+
+Currently a single script can be nominated to handle a list of chosen
+events, and the event name is passed to the handler to allow it to
+distinguish between them (cylc once allowed distinct handlers for each
+event but this required verbose configuration for little gain).
+
+Custom task event handlers can be located in the suite bin directory.
+They are passed the following arguments by cylc:
+
+\begin{lstlisting}
+<hook-script> EVENT SUITE TASKID MESSAGE
+\end{lstlisting}
+where EVENT is one of the following strings:
+\begin{myitemize}
+    \item `submitted' - the task was submitted
+    \item `started' - the task started running 
+    \item `succeeded' - the task succeeded
+    \item `submission\_failed' - the task failed in job submission
+    \item `warning' - the task reported a warning message
+    \item `failed' - the task failed
+    \item `retry' - the task failed but will retry
+    \item `submission\_timeout' - task job submission timed out
+    \item `execution\_timeout' - task execution timed out
+\end{myitemize}
+MESSAGE, if provided, describes what has happened, and TASKID identifies
+the task (\lstinline=NAME%CYCLE= for cycling tasks).
+
+The retry event occurs if a task fails and has any remaining retries
+configured (see Section~\ref{TaskRetries}). 
+The event handler will be called as soon as the task fails, not after
+the retry delay period when it is resubmitted.
+
+To configure timeout handling, list `submission\_timeout' and/or
+`execution\_timeout' in the events to handle, and then specify 
+corresponding timeout values in minutes using the timeout config items
+as documented in the suite.rc reference.
+
+{\em Note that event handlers are called by cylc itself, not by the 
+running tasks} so if you wish to pass them additional information via
+the environment you must use [cylc] $\rightarrow$ [[environment]],
+not task runtime environments.
+
+Here is an example suite that tests the ``retry'' and ``failed'' events.
+The handler in this case simply echoes its command line arguments to
+suite stdout.
+
+\lstset{language=suiterc}
+\begin{lstlisting}
+[scheduling]
+    initial cycle time = 2010080800
+    final cycle time = 2010081000
+    [[dependencies]]
+        [[[0]]]
+            graph = "foo => bar"
+[runtime]
+    [[foo]]
+        retry delays = 0, 0.5
+        command scripting = """
+echo TRY NUMBER: $CYLC_TASK_TRY_NUMBER
+sleep 10
+# retry twice and succeed on the final try,
+# but fail definitively in the final cycle.
+if (( CYLC_TASK_TRY_NUMBER <= 2 )) || \
+    (( CYLC_TASK_CYCLE_TIME == CYLC_SUITE_FINAL_CYCLE_TIME )); then
+    echo ABORTING
+    /bin/false
+fi"""
+        [[[event hooks]]]
+            events = retry, failed
+            script = "echo !!!!!EVENT!!!!! "
+\end{lstlisting}
+
+
 \section{Other Topics In Brief}
 
 The following topics have yet to be documented in detail.
@@ -4774,10 +4872,6 @@ The following topics have yet to be documented in detail.
         these are used to resetart a suite from a previous state of operation.
         They are mentioned in the {\em Quick Start Guide}. Watch the
         suite log after intervening in a suite, to get the filenames.
-
-    \item Centralized alerting and timeouts: see documentation of {\em
-        task event hooks} in the {\em Suite.rc Reference},
-        Appendix~\ref{SuiteRCReference}.
 
     \item Recursive purge: this is a powerful intervention but you need
         to understand how it works before using it. See 
